# datum-studio

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  api.h  core.cpp  core.h  datumstudio.cpp  datumstudio.h  main.cpp  metabar.cpp  metabar.h  platform.cpp  platform.h  statusbar.cpp  statusbar.h
src/common/: assetfile.cpp  assetfile.h  commandbar.cpp  commandbar.h  dialogfactory.h  droplabel.cpp  droplabel.h  qccombobox.cpp  qccombobox.h  qcdoubleslider.cpp  qcdoubleslider.h  qcdoublespinbox.cpp  qcdoublespinbox.h  qcfilelineedit.cpp  qcfilelineedit.h  qclineedit.cpp  qclineedit.h  qcribbon.cpp  qcribbon.css  qcribbon.h  qcslider.cpp  qcslider.h  qcspinbox.cpp  qcspinbox.h  qpointtraits.h  viewport.cpp  viewport.h
src/forms/: about.ui  datumstudio.ui  resources.qrc
src/plugins/animation/: CMakeLists.txt  animation.cpp  animation.h  animationplugin.cpp  animationplugin.h  animationplugin.json  animationplugin.qrc  animationproperties.cpp  animationproperties.h  animationproperties.ui  animationview.cpp  animationview.h  animationviewer.cpp  animationviewer.h
src/plugins/assimporter/: CMakeLists.txt  assimporter.cpp  assimporter.h  assimporter.json  assimporter.qrc
src/plugins/bineditor/: CMakeLists.txt  bineditor.cpp  bineditor.h  bineditorplugin.cpp  bineditorplugin.h  bineditorplugin.json
src/plugins/console/: CMakeLists.txt  consoleplugin.cpp  consoleplugin.h  consoleplugin.json  consoleplugin.ui
src/plugins/content/: CMakeLists.txt  contentapi.h  contentmanager.cpp  contentmanager.h  contentplugin.cpp  contentplugin.h  contentplugin.json  contentplugin.qrc  contentplugin.ui  contentview.cpp  contentview.h  folderview.cpp  folderview.h
src/plugins/datumui/: CMakeLists.txt  datumuiplugin.cpp  datumuiplugin.h  datumuiplugin.json  datumuiplugin.qrc
src/plugins/devilimporter/: CMakeLists.txt  devilimporter.cpp  devilimporter.h  devilimporter.json  devilimporter.qrc
src/plugins/document/: CMakeLists.txt  documentapi.h  documentmanager.cpp  documentmanager.h  documentplugin.cpp  documentplugin.h  documentplugin.json
src/plugins/edit/: CMakeLists.txt  editorapi.h  editormanager.cpp  editormanager.h  editorview.cpp  editorview.h  editorview.ui  editplugin.cpp  editplugin.h  editplugin.json  editplugin.qrc  editplugin.ui
src/plugins/font/: CMakeLists.txt  font.cpp  font.h  fonteditor.cpp  fonteditor.h  fontplugin.cpp  fontplugin.h  fontplugin.json  fontplugin.qrc  fontproperties.cpp  fontproperties.h  fontproperties.ui  fontview.cpp  fontview.h
src/plugins/hdrimporter/: CMakeLists.txt  hdrimporter.cpp  hdrimporter.h  hdrimporter.json  hdrimporter.qrc
src/plugins/home/: CMakeLists.txt  homeplugin.cpp  homeplugin.h  homeplugin.json  homeplugin.qrc  homeplugin.ui
src/plugins/image/: CMakeLists.txt  image.cpp  image.h  imageplugin.cpp  imageplugin.h  imageplugin.json  imageplugin.qrc  imgproperties.cpp  imgproperties.h  imgproperties.ui  imgview.cpp  imgview.h  imgviewer.cpp  imgviewer.h
src/plugins/imgimporter/: CMakeLists.txt  imgimporter.cpp  imgimporter.h  imgimporter.json  imgimporter.qrc
src/plugins/lumpimporter/: CMakeLists.txt  lumpimporter.cpp  lumpimporter.h  lumpimporter.json  lumpimporter.qrc
src/plugins/material/: CMakeLists.txt  material.cpp  material.h  materialeditor.cpp  materialplugin.cpp  materialplugin.h  materialplugin.json  materialplugin.qrc  materialproperties.cpp  materialproperties.h  materialproperties.ui  materialview.cpp  materialview.h  materialwidget.cpp  materialwidget.h  materialwidget.ui
src/plugins/mesh/: CMakeLists.txt  mesh.cpp  mesh.h  meshplugin.cpp  meshplugin.h  meshplugin.json  meshplugin.qrc  meshproperties.cpp  meshproperties.h  meshproperties.ui  meshview.cpp  meshview.h  meshviewer.cpp  meshviewer.h
src/plugins/model/: CMakeLists.txt  materialwidget.cpp  materialwidget.h  materialwidget.ui  meshlistwidget.cpp  meshlistwidget.h  meshwidget.cpp  meshwidget.h  model.cpp  model.h  modeleditor.cpp  modeleditor.h  modelplugin.cpp  modelplugin.h  modelplugin.json  modelplugin.qrc  modelproperties.cpp  modelproperties.h  modelproperties.ui  modelview.cpp  modelview.h  slotlistwidget.cpp  slotlistwidget.h  slotswidget.cpp  slotswidget.h
src/plugins/objimporter/: CMakeLists.txt  objimporter.cpp  objimporter.h  objimporter.json  objimporter.qrc
src/plugins/ocean/: CMakeLists.txt  materialeditor.cpp  materialeditor.h  materialproperties.cpp  materialproperties.h  materialproperties.ui  materialview.cpp  materialview.h  materialwidget.cpp  materialwidget.h  materialwidget.ui  oceanmaterial.cpp  oceanmaterial.h  oceanplugin.cpp  oceanplugin.h  oceanplugin.json  oceanplugin.qrc
src/plugins/pack/: CMakeLists.txt  build.cpp  build.h  build.ui  fileview.cpp  fileview.h  pack.cpp  pack.h  packapi.h  packmodel.cpp  packmodel.h  packplugin.cpp  packplugin.h  packplugin.json  packplugin.qrc  packplugin.ui  properties.ui  treeview.cpp  treeview.h
src/plugins/packimporter/: CMakeLists.txt  packimporter.cpp  packimporter.h  packimporter.json  packimporter.qrc
src/plugins/particle/: CMakeLists.txt  curveeditor.cpp  curveeditor.h  curveeditor.ui  emitterlistwidget.cpp  emitterlistwidget.h  emitterwidget.cpp  emitterwidget.h  emitterwidget.ui  particleeditor.cpp  particleeditor.h  particleplugin.cpp  particleplugin.h  particleplugin.json  particleplugin.qrc  particleproperties.cpp  particleproperties.h  particleproperties.ui  particlesystem.cpp  particlesystem.h  particleview.cpp  particleview.h
src/plugins/project/: CMakeLists.txt  newproject.ui  projectapi.h  projectmanager.cpp  projectmanager.h  projectplugin.cpp  projectplugin.h  projectplugin.json  projectplugin.qrc
src/plugins/shader/: CMakeLists.txt  resourcelimits.h  shaderplugin.cpp  shaderplugin.h  shaderplugin.json  shaderplugin.qrc
src/plugins/skybox/: CMakeLists.txt  skybox.cpp  skybox.h  skyboxeditor.cpp  skyboxeditor.h  skyboxplugin.cpp  skyboxplugin.h  skyboxplugin.json  skyboxplugin.qrc  skyboxproperties.cpp  skyboxproperties.h  skyboxproperties.ui  skyboxview.cpp  skyboxview.h
src/plugins/sprite/: CMakeLists.txt  layerlistwidget.cpp  layerlistwidget.h  (+15 more)
(+53 files in other folders)
